[project]
name = "corekit"
version = "0.1.0"
description = "Cross-Platform App Framework"
authors = [{ name = "Your Name", email = "you@example.com" }]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.115.0,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "flet (>=0.26.0,<0.27.0)",
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
black = "^25.1.0"
mypy = "^1.15.0"
flake8 = "^7.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.flake8]
max-line-length = 88
exclude = "-venv"

[tool.mypy]
strict = true
